--- a/contact.html
+++ b/contact.html
@@ -27,8 +27,18 @@
   <div class="container border mt-3 bg-light">
     <div class="row">
       <div class="col-md-6 p-5 bg-primary text-white">
-        <h1>Hi there!</h1>
+        <h1>Location</h1>
         <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo,</h4>
+        <!-- Google Maps iframe -->
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3851.2683849696805!2d120.58870399999999!3d15.1435984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3396f243aeb6ace3%3A0x8d7f31d6b0ab0a46!2sCahili%20Birthing%20Faclity!5e0!3m2!1sen!2sph!4v1723652874390!5m2!1sen!2sph"
+          width="100%"
+          height="300"
+          style="border:0;"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
       </div>
       <div class="col-md-6 border-left py-3">
         <h1>Contact form</h1>
