--- a/index.html
+++ b/index.html
@@ -54,21 +54,21 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="https://static.independent.co.uk/s3fs-public/thumbnails/image/2016/02/24/11/Sadako-vs-Kayako.jpg?quality=75&width=1250&crop=3%3A2%2Csmart&auto=webp" alt="First slide">
+                    <img class="d-block w-100" src="https://media.discordapp.net/attachments/1216019980852658216/1273627895113318531/IMG_8234.jpg?ex=66bf4de9&is=66bdfc69&hm=0ae35b2d70700ff3f1218ea3add073c64a53fa641535f1ae4065323fdc9ec98f&=&format=webp&width=800&height=533" alt="First slide">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Quality Care</h5>
                         <p>We provide the best care for mothers and babies.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="https://pyxis.nymag.com/v1/imgs/03d/217/32670b10cee468c343913115ac3dffab59-02-japeness-horrro.rhorizontal.w700.jpg" alt="Second slide">
+                    <img class="d-block w-100" src="https://media.discordapp.net/attachments/1216019980852658216/1273627895461318666/IMG_8233.jpg?ex=66bf4de9&is=66bdfc69&hm=f51fa1abeb3143bca6cf82c8392441cce2ec8204763186ea9c2136ed8366a3d3&=&format=webp&width=800&height=533" alt="Second slide">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Comfortable Environment</h5>
                         <p>Our clinic is designed to be a comfortable place for you.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="https://hips.hearstapps.com/hmg-prod/images/ghost-jokes-1626299517.jpg?crop=0.6666666666666666xw:1xh;center,top&resize=980:*" alt="Third slide">
+                    <img class="d-block w-100" src="https://media.discordapp.net/attachments/1216019980852658216/1273627895809703936/IMG_8232.jpg?ex=66bf4de9&is=66bdfc69&hm=db11a66b16277a4bcce1ed47014f789ff2b9de585dd5b8227ec1388cedcdc409&=&format=webp&width=800&height=510" alt="Third slide">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Experienced Team</h5>
                         <p>Meet our experienced and caring team of professionals.</p>
