--- a/info.html
+++ b/info.html
@@ -34,14 +34,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
+               
                 <li class="nav-item">
-                    <a class="nav-link" href="info.html">Info</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="aboutUs.html">About Us</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact Us</a>
+                    
+                    <a href="#" class="nav-link" onclick="history.back()">Go Back</a>
                 </li>
             </ul>
         </div>
